# ATS-PROJECT

BACKEND/: pyproject.toml
BACKEND/Agent/: .env  agent.py  requirements.txt
BACKEND/Server/: .env  server.py  serverpdf.py
FRONTEND/: index.html  package-lock.json  package.json
FRONTEND/src/: App.jsx
FRONTEND/src/Component/: Form.jsx
